# pycachegen

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  example_usage.py  install.sh  pyproject.toml  setup.py  test.py
acaverilog/: CMakeLists.txt  __init__.py  acadl_object_verilog_template.py  acaverilog.py  assertv.h  exceptions.py  execute_stage_verilog_template.py  functional_unit_verilog_template.py  instruction_fetch_stage_verilog_template.py  instruction_memory_access_unit_verilog_template.py  instruction_memory_verilog_template.py  memory_access_unit_verilog_template.py  memory_verilog_template.py  pipeline_stage_verilog_template.py  register_file_verilog_template.py  scoreboard_verilog_template.py  target_id_config.py  test.py  utils.py
acaverilog/generators/: acadl_object_generator.py  cache_generator.py  cache_wrapper_generator.py  execute_stage_generator.py  functional_memory_generator.py  functional_unit_generator.py  id_table_generator.py  instruction_fetch_stage_generator.py  lookup_table_generator.py  memory_access_unit_generator.py  memory_generator.py  module_generator.py  one_hot_to_bin_generator.py  pipeline_stage_generator.py  register_file_generator.py  replacement_policy_generator.py  scoreboard_generator.py  test_generator.py  top_module_generator.py
acaverilog/generators/cache/: CMakeLists.txt  README.md  cache_config_validation.py  cache_tb.cpp  cache_wrapper_tb.cpp  cache_wrapper_tb_1.cpp  cache_wrapper_tb_2.cpp  cache_wrapper_tb_3.cpp  cache_wrapper_tb_4.cpp  cache_wrapper_tb_5.cpp  cache_wrapper_tb_6.cpp  cache_wrapper_tb_7.cpp  functional_memory_tb.cpp
acaverilog/generators/cache/custom/: CMakeLists.txt  custom_cache_wrapper.v  custom_cache_wrapper_generator.py  mem_trace.h  tracing_tb.cpp
acaverilog/generators/cache/generators/: cache_generator.py  cache_wrapper_generator.py  dynamic_priority_encoder_generator.py  functional_memory_generator.py  memory_access_arbiter.py  one_hot_to_bin_generator.py  priority_encoder_generator.py  replacement_policy_generator.py  round_robin_encoder_generator.py
acaverilog/generators/cache/tb/: cache_wrapper_tb_1.cpp  cache_wrapper_tb_10.cpp  cache_wrapper_tb_11.cpp  cache_wrapper_tb_12.cpp  cache_wrapper_tb_13.cpp  cache_wrapper_tb_14.cpp  (+24 more)
acaverilog/generators/functional_simulation_stubs/: functional_unit_generator.py  memory_access_unit_generator.py  memory_generator.py  register_file_generator.py
acaverilog/instruction/: data_field_config.py  id_config.py  instruction.py  instruction_format.py  instruction_format_config.py  opcode_config.py  target_id_config.py
acaverilog/tb_templates/execute_stage/: CMakeLists.txt  ExecuteStage_tb.cc
acaverilog/tb_templates/functional_unit/: CMakeLists.txt  FunctionalUnit_tb.cc
acaverilog/tb_templates/instruction_fetch_stage/: CMakeLists.txt  InstructionFetchStage.v  InstructionMemoryFetchStageWrapper.v  PopCount.v
acaverilog/tb_templates/instruction_memory/: InstructionMemory_tb.cc
acaverilog/tb_templates/instruction_memory_fetch_stage/: CMakeLists.txt
acaverilog/tb_templates/memory/: CMakeLists.txt  Memory_tb.cc  Memory_tb_template.cc
acaverilog/tb_templates/memory_access_unit/: CMakeLists.txt
acaverilog/tb_templates/pipeline_stage/: CMakeLists.txt  PipelineStage_tb.cc
acaverilog/tb_templates/register_file/: CMakeLists.txt  RegisterFile_tb.cc
acaverilog/tb_templates/scoreboard/: Scoreboard.v  Scoreboard_tb.cc
acaverilog/templates/: CMakeLists_template.txt  assertv.h  tb.cc_template
acaverilog/templates/tb_tests/: _old_PipelineStage_tb.cc_template
acaverilog/verilog_templates/instruction_fetch_stage/: CMakeLists.txt  InstructionFetchStage.v  InstructionFetchStage_tb.cc  InstructionMemoryFetchStageWrapper.v  PopCount.v
acaverilog/verilog_templates/instruction_memory/: CMakeLists.txt  InstructionMemory_tb.cc
acaverilog/verilog_templates/memory/: AddressTranslator.v  CMakeLists.txt  Memory.v  Memory_tb.cc
acaverilog/verilog_templates/pipeline_stage/: CMakeLists.txt  ForwardLookupTable.v  PipelineStage.v  PipelineStage_tb.cc
acaverilog/verilog_templates/scoreboard/: CMakeLists.txt  Scoreboard.v  Scoreboard_tb.cc
iob_cache/: CMakeLists.txt  README.md  cache_tb.cpp
iob_cache/src/: iob_asym_converter.v  iob_cache_axi.v  iob_cache_back_end.v  iob_cache_back_end_axi.v  iob_cache_conf.vh  iob_cache_control.v  iob_cache_front_end.v  iob_cache_iob.v  iob_cache_read_channel.v  iob_cache_read_channel_axi.v  iob_cache_sim_wrapper.v  iob_cache_swreg_def.vh  iob_cache_swreg_gen.v  iob_cache_write_channel.v  iob_cache_write_channel_axi.v  iob_fifo_sync.v  iob_ram_2p.v  iob_reg.v
testbenches/: CMakeLists.txt  cache_wrapper_random_testing.py  cache_wrapper_tb_01.py  cache_wrapper_tb_02.py  cache_wrapper_tb_03.py  cache_wrapper_tb_04.py  cache_wrapper_tb_05.py  cache_wrapper_tb_06.py  cache_wrapper_tb_07.py  cache_wrapper_tb_08.py  cache_wrapper_tb_09.py  cache_wrapper_tb_10.py  cache_wrapper_tb_11.py  cache_wrapper_tb_12.py  cache_wrapper_tb_13.py  cache_wrapper_tb_14.py  cache_wrapper_tb_15.py  cache_wrapper_tb_16.py  cache_wrapper_tb_17.py  cache_wrapper_tb_18.py  cache_wrapper_tb_19.py  cache_wrapper_tb_20.py  cache_wrapper_tb_21.py  cache_wrapper_tb_22.py  cache_wrapper_tb_23.py  cache_wrapper_tb_24.py  cache_wrapper_tb_25.py  cache_wrapper_tb_26.py  cache_wrapper_tb_27.py  cache_wrapper_tb_28.py  cache_wrapper_tb_29.py  cache_wrapper_tb_30.py  cache_wrapper_tb_31.py  cache_wrapper_tb_32.py  cache_wrapper_tb_33.py  main_memory_tb_01.py  tb_cache_wrapper_generator.py  tb_utils.py
testbenches/tb/: cache_wrapper_tb_12.cpp  cache_wrapper_tb_13.cpp  cache_wrapper_tb_15.cpp  cache_wrapper_tb_17.cpp  cache_wrapper_tb_2.cpp  cache_wrapper_tb_20.cpp  cache_wrapper_tb_22.cpp  cache_wrapper_tb_23.cpp  cache_wrapper_tb_26.cpp  cache_wrapper_tb_3.cpp  cache_wrapper_tb_30.cpp  cache_wrapper_tb_4.cpp  cache_wrapper_tb_6.cpp  cache_wrapper_tb_8.cpp  cache_wrapper_tb_9.cpp
tracing/: CMakeLists.txt  custom_cache_wrapper_generator.py  tracing_tb.cpp
(+359 files in other folders)
