[build-system]
requires = ["setuptools>=63.2.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "acaverilog"
version = "1.0.0"
description = "Abstract Computer Architecture Verilog Generation"
readme = "README.md"
authors = [{ name = "Konstantin Lübeck", email = "konstantin.luebeck@uni-tuebingen.de" }]
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["computer architecture", "simulation"]

dependencies = [
    "acadl>=2.0.0",
    "Jinja2>=3.1.2"
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["yapf", "bumpver", "isort", "pip-tools", "unittest", "pre-commit"]

[project.urls]
Homepage = "https://github.com/ekut-es/acaverilog"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"',]
"setup.py" = ['version="{version}"']
