[build-system]
requires = ["setuptools>=63.2.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "acaverilog"
version = "1.0.0"
description = "Abstract Computer Architecture Verilog Generation"
readme = "README.md"
authors = [{ name = "Konstantin Lübeck", email = "konstantin.luebeck@uni-tuebingen.de" }]
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["computer architecture", "simulation"]

dependencies = [
    "acadl>=2.0.0",
    "Jinja2>=3.1.2",
    "bitarray>=2.6.0",
    "pyverilog>=1.3.0",
    "veriloggen>=2.3.0"
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["yapf", "bumpver", "isort", "pip-tools", "pre-commit"]

[project.urls]
Homepage = "https://github.com/ekut-es/acaverilog"

[tool.yapf]
arithmetic_precedence_indication = "True"
force_multiline_dict = "True"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"',]
"setup.py" = ['version="{version}"']
